// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <div
    className="c-link-block font-heading font-bold mt-11 mb-3 text-xl m-tnm-sidebar__route-name u-bg--red-line"
  >
    <a
      className="c-link-block__outer-link"
      href="/schedules/Red"
    >
      <span
        className="sr-only"
      >
        Go to route
      </span>
    </a>
    <div
      className="c-link-block__inner"
    >
      <span
        className="notranslate"
      >
        <span
          className=""
        >
          Red Line
        </span>
        <div
          className="c-link-block__view-schedule"
        >
          View schedule
        </div>
      </span>
    </div>
  </div>
  <div
    className="m-tnm-sidebar__direction"
  >
    <div
      className="m-tnm-sidebar__direction-name u-small-caps"
    >
      South
    </div>
    <div
      className="m-tnm-sidebar__direction-headsigns"
    >
      <div
        className="m-tnm-sidebar__headsign-schedule"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large notranslate"
          >
            Ashmont
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time "
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                3
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time "
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                13
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="m-tnm-sidebar__headsign-schedule"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large notranslate"
          >
            Braintree
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time "
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                9
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time "
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                21
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-tnm-sidebar__direction"
  >
    <div
      className="m-tnm-sidebar__direction-name u-small-caps"
    >
      North
    </div>
    <div
      className="m-tnm-sidebar__direction-headsigns"
    >
      <div
        className="m-tnm-sidebar__headsign-schedule m-tnm-sidebar__headsign-schedule--condensed"
      >
        <div
          className="m-tnm-sidebar__headsign"
        >
          <div
            className="m-tnm-sidebar__headsign-name m-tnm-sidebar__headsign-name--large notranslate"
          >
            Alewife
          </div>
        </div>
        <div
          className="m-tnm-sidebar__schedules"
        >
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time "
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                7
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
          <div
            className="m-tnm-sidebar__schedule"
          >
            <div
              className="m-tnm-sidebar__time "
            >
              <div
                className="m-tnm-sidebar__time-number"
              >
                13
              </div>
              <div
                className="m-tnm-sidebar__time-mins"
              >
                min
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders blue line routes 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <div
    className="c-link-block font-heading font-bold mt-11 mb-3 text-xl m-tnm-sidebar__route-name u-bg--blue-line"
  >
    <a
      className="c-link-block__outer-link"
      href="/schedules/Blue"
    >
      <span
        className="sr-only"
      >
        Go to route
      </span>
    </a>
    <div
      className="c-link-block__inner"
    >
      <span
        className="notranslate"
      >
        <span
          className=""
        >
          Blue Line
        </span>
        <div
          className="c-link-block__view-schedule"
        >
          View schedule
        </div>
      </span>
    </div>
  </div>
  <div
    className="m-stop-page__no-departures"
  >
    <div>
      No departures within 24 hours
    </div>
    <div>
      <a
        className="c-call-to-action"
        href="/schedules/Blue"
      >
        View 
        Blue Line
         schedule
      </a>
    </div>
  </div>
</div>
`;

exports[`renders bus routes 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <div
    className="c-link-block font-heading font-bold mt-11 mb-3 text-xl m-tnm-sidebar__route-name u-bg--bus"
  >
    <a
      className="c-link-block__outer-link"
      href="/schedules/Bus"
    >
      <span
        className="sr-only"
      >
        Go to route
      </span>
    </a>
    <div
      className="c-link-block__inner"
    >
      <span
        className="notranslate"
      >
        <span
          className="bus-route-sign"
        >
          Bus
        </span>
        <div
          className="c-link-block__view-schedule"
        >
          View schedule
        </div>
      </span>
    </div>
  </div>
  <div
    className="m-stop-page__no-departures"
  >
    <div>
      No departures within 24 hours
    </div>
    <div>
      <a
        className="c-call-to-action"
        href="/schedules/Bus"
      >
        View 
        Bus
         schedule
      </a>
    </div>
  </div>
</div>
`;

exports[`renders ferry routes 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <div
    className="c-link-block font-heading font-bold mt-11 mb-3 text-xl m-tnm-sidebar__route-name u-bg--ferry"
  >
    <a
      className="c-link-block__outer-link"
      href="/schedules/Boat-F4"
    >
      <span
        className="sr-only"
      >
        Go to route
      </span>
    </a>
    <div
      className="c-link-block__inner"
    >
      <span
        className="notranslate"
      >
        <span
          className=""
        >
          Charlestown Ferry
        </span>
        <div
          className="c-link-block__view-schedule"
        >
          View schedule
        </div>
      </span>
    </div>
  </div>
  <div
    className="m-stop-page__no-departures"
  >
    <div>
      No departures within 24 hours
    </div>
    <div>
      <a
        className="c-call-to-action"
        href="/schedules/Boat-F4"
      >
        View 
        Charlestown Ferry
         schedule
      </a>
    </div>
  </div>
</div>
`;

exports[`renders green line routes 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <div
    className="c-link-block font-heading font-bold mt-11 mb-3 text-xl m-tnm-sidebar__route-name u-bg--green-line"
  >
    <a
      className="c-link-block__outer-link"
      href="/schedules/Green-B"
    >
      <span
        className="sr-only"
      >
        Go to route
      </span>
    </a>
    <div
      className="c-link-block__inner"
    >
      <span
        className="notranslate"
      >
        <span
          className=""
        >
          B Line
        </span>
        <div
          className="c-link-block__view-schedule"
        >
          View schedule
        </div>
      </span>
    </div>
  </div>
  <div
    className="m-stop-page__no-departures"
  >
    <div>
      No departures within 24 hours
    </div>
    <div>
      <a
        className="c-call-to-action"
        href="/schedules/Green-B"
      >
        View 
        B Line
         schedule
      </a>
    </div>
  </div>
</div>
`;

exports[`renders orange line routes 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <div
    className="c-link-block font-heading font-bold mt-11 mb-3 text-xl m-tnm-sidebar__route-name u-bg--orange-line"
  >
    <a
      className="c-link-block__outer-link"
      href="/schedules/Orange"
    >
      <span
        className="sr-only"
      >
        Go to route
      </span>
    </a>
    <div
      className="c-link-block__inner"
    >
      <span
        className="notranslate"
      >
        <span
          className=""
        >
          Orange Line
        </span>
        <div
          className="c-link-block__view-schedule"
        >
          View schedule
        </div>
      </span>
    </div>
  </div>
  <div
    className="m-stop-page__no-departures"
  >
    <div>
      No departures within 24 hours
    </div>
    <div>
      <a
        className="c-call-to-action"
        href="/schedules/Orange"
      >
        View 
        Orange Line
         schedule
      </a>
    </div>
  </div>
</div>
`;

exports[`renders red line routes 1`] = `
<div
  className="m-stop-page__departures-route"
>
  <div
    className="c-link-block font-heading font-bold mt-11 mb-3 text-xl m-tnm-sidebar__route-name u-bg--red-line"
  >
    <a
      className="c-link-block__outer-link"
      href="/schedules/Red"
    >
      <span
        className="sr-only"
      >
        Go to route
      </span>
    </a>
    <div
      className="c-link-block__inner"
    >
      <span
        className="notranslate"
      >
        <span
          className=""
        >
          Red Line
        </span>
        <div
          className="c-link-block__view-schedule"
        >
          View schedule
        </div>
      </span>
    </div>
  </div>
  <div
    className="m-stop-page__no-departures"
  >
    <div>
      No departures within 24 hours
    </div>
    <div>
      <a
        className="c-call-to-action"
        href="/schedules/Red"
      >
        View 
        Red Line
         schedule
      </a>
    </div>
  </div>
</div>
`;
